hphp/hack/test/typecheck/coeffects/conformance/user-defined-type_as_context.php.exp
File "user-defined-type_as_context.php", line 4, characters 43-47:
Unbound name: `HH\Contexts\Clazz` (Naming[2049])
File "user-defined-type_as_context.php", line 4, characters 43-47:
Unbound name: `HH\Contexts\Unsafe\Clazz` (Naming[2049])
File "user-defined-type_as_context.php", line 7, characters 47-51:
Unbound name: `HH\Contexts\Iface` (Naming[2049])
File "user-defined-type_as_context.php", line 7, characters 47-51:
Unbound name: `HH\Contexts\Unsafe\Iface` (Naming[2049])
File "user-defined-type_as_context.php", line 10, characters 34-38:
Unbound name: `HH\Contexts\Clazz` (Naming[2049])
File "user-defined-type_as_context.php", line 10, characters 34-38:
Unbound name: `HH\Contexts\Unsafe\Clazz` (Naming[2049])
File "user-defined-type_as_context.php", line 11, characters 38-42:
Unbound name: `HH\Contexts\Iface` (Naming[2049])
File "user-defined-type_as_context.php", line 11, characters 38-42:
Unbound name: `HH\Contexts\Unsafe\Iface` (Naming[2049])
File "user-defined-type_as_context.php", line 4, characters 43-47:
Illegal context: `\HH\Contexts\Clazz`
Cannot use a context defined outside namespace \HH\Contexts (NastCheck[3090])
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Contexts are defined here
File "user-defined-type_as_context.php", line 7, characters 47-51:
Illegal context: `\HH\Contexts\Iface`
Cannot use a context defined outside namespace \HH\Contexts (NastCheck[3090])
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Contexts are defined here
File "user-defined-type_as_context.php", line 10, characters 34-38:
Illegal context: `\HH\Contexts\Clazz`
Cannot use a context defined outside namespace \HH\Contexts (NastCheck[3090])
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Contexts are defined here
File "user-defined-type_as_context.php", line 11, characters 38-42:
Illegal context: `\HH\Contexts\Iface`
Cannot use a context defined outside namespace \HH\Contexts (NastCheck[3090])
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Contexts are defined here
